# kafo

./: Cargo.toml  README.md  config.json  example.config.json
src/: config.rs  file_watcher.rs  main.rs
