[package]
name = "kafo"
version = "0.1.0"
authors = ["dom <35433518+Domterion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
colored = "2"